@@ -87,50 +87,54 @@ static char *rpmpoptfiles = RPMPOPTFILES;
 #endif
 #endif
 
-pgpHashAlgo rpmioDigestHashAlgo = PGPHASHALGO_NONE;
+pgpHashAlgo rpmioDigestHashAlgo = -1;
 
 /**
  * Digest options using popt.
  */
 struct poptOption rpmioDigestPoptTable[] = {
  { "md2", '\0', POPT_ARG_VAL, 	&rpmioDigestHashAlgo, PGPHASHALGO_MD2,
-	NULL, NULL },
+	N_("MD2 digest (RFC-1319)"), NULL },
  { "md4", '\0', POPT_ARG_VAL, 	&rpmioDigestHashAlgo, PGPHASHALGO_MD4,
-	NULL, NULL },
+	N_("MD4 digest"), NULL },
  { "md5", '\0', POPT_ARG_VAL, 	&rpmioDigestHashAlgo, PGPHASHALGO_MD5,
-	NULL, NULL },
+	N_("MD5 digest (RFC-1321)"), NULL },
  { "sha1",'\0', POPT_ARG_VAL, 	&rpmioDigestHashAlgo, PGPHASHALGO_SHA1,
-	NULL, NULL },
+	N_("SHA-1 digest (FIPS-180-1)"), NULL },
  { "sha224",'\0', POPT_ARG_VAL, &rpmioDigestHashAlgo, PGPHASHALGO_SHA224,
-	NULL, NULL },
+	N_("SHA-224 digest (FIPS-180-2)"), NULL },
  { "sha256",'\0', POPT_ARG_VAL, &rpmioDigestHashAlgo, PGPHASHALGO_SHA256,
-	NULL, NULL },
+	N_("SHA-256 digest (FIPS-180-2)"), NULL },
  { "sha384",'\0', POPT_ARG_VAL, &rpmioDigestHashAlgo, PGPHASHALGO_SHA384,
-	NULL, NULL },
+	N_("SHA-384 digest (FIPS-180-2)"), NULL },
  { "sha512",'\0', POPT_ARG_VAL, &rpmioDigestHashAlgo, PGPHASHALGO_SHA512,
-	NULL, NULL },
+	N_("SHA-512 digest (FIPS-180-2)"), NULL },
  { "salsa10",'\0', POPT_ARG_VAL,&rpmioDigestHashAlgo, PGPHASHALGO_SALSA10,
-	NULL, NULL },
+	N_("SALSA-10 hash"), NULL },
  { "salsa20",'\0', POPT_ARG_VAL,&rpmioDigestHashAlgo, PGPHASHALGO_SALSA20,
-	NULL, NULL },
+	N_("SALSA-20 hash"), NULL },
  { "rmd128",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_RIPEMD128,
-	NULL, NULL },
+	N_("RIPEMD-128 digest"), NULL },
  { "rmd160",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_RIPEMD160,
-	NULL, NULL },
+	N_("RIPEMD-160 digest"), NULL },
  { "rmd256",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_RIPEMD256,
-	NULL, NULL },
+	N_("RIPEMD-256 digest"), NULL },
  { "rmd320",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_RIPEMD320,
-	NULL, NULL },
+	N_("RIPEMD-320 digest"), NULL },
  { "tiger",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_TIGER192,
-	NULL, NULL },
+	N_("TIGER digest"), NULL },
  { "crc32",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_CRC32,
-	NULL, NULL },
+	N_("CRC-32 checksum"), NULL },
  { "crc64",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_CRC64,
-	NULL, NULL },
+	N_("CRC-64 checksum"), NULL },
  { "adler32",'\0', POPT_ARG_VAL,&rpmioDigestHashAlgo, PGPHASHALGO_ADLER32,
-	NULL, NULL },
+	N_("ADLER-32 checksum"), NULL },
  { "jlu32",'\0', POPT_ARG_VAL,	&rpmioDigestHashAlgo, PGPHASHALGO_JLU32,
-	NULL, NULL },
+	N_("lookup3 hash"), NULL },
+ { "none",'\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &rpmioDigestHashAlgo, PGPHASHALGO_NONE,
+	N_("no hash algorithm"), NULL },
+ { "all",'\0', POPT_ARG_VAL|POPT_ARGFLAG_DOC_HIDDEN, &rpmioDigestHashAlgo, 256,
+	N_("all hash algorithm(s)"), NULL },
     POPT_TABLEEND
 };
 
